# social-react

./: .gitignore  LICENSE  README.md  __main__.py  data_processing.py  domain_model.md  for_testing.py  main.py  predictions.py  pyproject.toml  requirements.md
.github/workflows/: run-pytest.yml
analyzer/: analyzer.py  com_classfiction.py  data_processing.py  lab.ipynb  note.py  predictions.py
analyzer/data/: comments_classified.txt
cookies/: cookies.json
data/: Google_comments.txt  Google_posts.csv  Google_randomly_labeld.xlsx  comments_classified.txt
data/asac.ltuc/: comments.csv
data/cnn/: classified_comments.txt  comments.csv
data/entertainmenttonight/: comments.csv
data/google/: classified_comments.txt  comments.csv  keras_metadata.pb  saved_model.pb
data/natgeo/: classified_comments.txt  comments.csv
data/posts_comments/: ASAC.LTUC_comments.txt  Google_comments.txt  Google_posts.csv  RealMadrid_posts.csv
data/realmadrid/: comments.csv
data/test/: classified_comments.txt
data/test_/: RealMadrid_posts.csv  google_comments.txt  negative.txt  nutral.txt  positive.txt
data/youtube/: classified_comments.txt  comments.csv
fetch_posts/: functions.py  scrapper.py
socialreact/: app.py  main.py
socialreact/analyzer/: Google_comments.txt  analyzer.py  analyzerr.py  com_classfiction.py
socialreact/notebooks/: notebook.ipynb  scrapbook.ipynb
test_stdout/: test_welcome_message_.txt
tests/: flo.py  test_sim_basic.py  test_social_react.py  test_socialreact.py
tests/sim/: commenter.txt  data_len_option.txt  data_length.txt  help.txt  slow.txt  (+5 more)
(+3 files in other folders)
