[tool.poetry]
name = "socialreact"
version = "0.1.0"
description = ""
authors = ["majedalswaeer <majedalswaeer69@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
sklearn = "^0.0"
black = "^21.10b0"
flake8 = "^4.0.1"
keras = "^2.7.0"
pyenchant = "^3.2.2"
facebook-scraper = "^0.2.49"
jupyterlab = "^3.2.2"
ipynb = "^0.5.1"
import-ipynb = "^0.1.3"
coverage = "^6.1.1"
pytest-cov = "^3.0.0"
nltk = "^3.6.5"
openpyxl = "^3.0.9"
pyfiglet = "^0.8.post1"
termcolor = "^1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
